# EditorDeTexto

./: README.md  com.github.pedromiguel_dev.texteditorclone.json  meson.build
data/: com.github.pedromiguel_dev.texteditorclone.appdata.xml.in  com.github.pedromiguel_dev.texteditorclone.desktop.in  com.github.pedromiguel_dev.texteditorclone.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  editordetexto.gresource.xml  main.vala  meson.build  style.css  window.vala
